Check APIs and static improvement of the admin panel